--- a/Escritorio/fullCloud/css/index.css
+++ b/Escritorio/fullCloud/css/index.css
@@ -6,13 +6,18 @@
 	box-sizing: border-box;
 }
 
-.container-principal {
-	background-color: rgb(55, 118, 153);
-	padding: 10px;
+.container-header {
+	background-color: white;
+	padding: 5px;
 	overflow: hidden;
   position: fixed;
   width: 100%;
+	top:0;
+	right: 0;
+	left: 0;
 }
+
+/* header */
 
 ul, ol{
   padding: 0;
@@ -26,14 +31,15 @@ a{
 
 .fas{
 	margin-left: 15px;
-	color: white;
+	color: rgb(55, 118, 153);
 }
 
 .logo {
 	float: left;
 	color: white;
 	margin: 5px;
-	font-size: 45px;
+	width: 100px;
+
 }
 .header {
 	float: right;
@@ -47,19 +53,22 @@ a{
 	font-family: 'Anton', sans-serif;
 	margin-left: 20px;
 	margin-top: 10px;
+	padding-top: 10px;
 }
 
 .header a {
-	color: white;
+	color: rgb(55, 118, 153);
 	text-decoration: none;
 	text-transform: uppercase;
 }
+
 
 .banner{
   background-image: url(../imagenes/banner2.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   height: 500px;
+	margin-top: 80px;
 }
 
 .dentro-banner{
